Fix card scaling issue on smaller screens #23

--- a/cardie/staticfiles/main/card.css
+++ b/cardie/staticfiles/main/card.css
@@ -119,3 +119,11 @@
     background-color: none;
     color: rgb(64, 163, 255);
 }
+
+.card_wrap {
+    max-width: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: start;
+}
